--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-hook/window-size": "^3.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-table": "^8.20.5",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
