--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
