--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "shadcn": "^2.1.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vercel": "^37.14.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
